--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=catalogoLivros
+
+spring.datasource.url=jdbc:h2:file:C:/Users/vsantos9/catalogoLivros;AUTO_SERVER=TRUE
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Habilita o console do H2 no navegador
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# server.error.include-stacktrace=never
+
+# api.security.token.secret=${JWT_SECRET:12345678}
