Configurações de segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.h2.console.path=/h2-console
 
 # server.error.include-stacktrace=never
 
-# api.security.token.secret=${JWT_SECRET:12345678}
+api.security.token.secret=${JWT_SECRET:123}
