--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=catalogoLivros
 
-spring.datasource.url=jdbc:h2:file:C:/Users/vsantos9/catalogoLivros;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:./BD/catalogoLivros;AUTO_SERVER=TRUE
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
