Ajustes na documentação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=catalogoLivros
 
-spring.datasource.url=jdbc:h2:file:./BD/catalogoLivros;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:./BD/catalogoLivros;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=TRUE;
+spring.flyway.url=jdbc:h2:file:./BD/catalogoLivros;AUTO_SERVER=TRUE;
+spring.flyway.user=admin
+spring.flyway.password=123
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
